[gd_scene load_steps=6 format=3 uid="uid://dh8tkykpjigkd"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_3ycdq"]
[ext_resource type="PackedScene" uid="uid://dxapc0k1osd3i" path="res://scenes/player.tscn" id="1_av1lo"]
[ext_resource type="PackedScene" uid="uid://ce3a4him8tr6l" path="res://scenes/mob.tscn" id="2_qm2mc"]
[ext_resource type="PackedScene" uid="uid://cyrmqhaidvmnv" path="res://scenes/hud.tscn" id="4_364tm"]

[sub_resource type="Curve2D" id="Curve2D_sluxx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node" node_paths=PackedStringArray("mob_timer", "score_timer", "start_timer")]
script = ExtResource("1_3ycdq")
mob_scene = ExtResource("2_qm2mc")
mob_timer = NodePath("MobTimer")
score_timer = NodePath("ScoreTimer")
start_timer = NodePath("StartTimer")

[node name="Player" parent="." instance=ExtResource("1_av1lo")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_sluxx")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_364tm")]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
